--- a/css/style.css
+++ b/css/style.css
@@ -118,10 +118,9 @@ body h1, h2 {
 footer {
     display: flex;
     background-color: #1C1C1C;
-    height: 18;
-    padding: 0.2%;
-    margin-top: 5%;
+    position: relative;
     flex-direction: column;
+    align-items: center;
 }
 
 footer p{
@@ -129,9 +128,9 @@ footer p{
     color: #3A3A3A;
     text-align: center;
     font-size: small;
-    margin-bottom: 5px;
     justify-content: center;
     text-shadow: 0px 0px 19px rgba(0,0,0,0.6);
+    margin-bottom: 0px;
 }
 
 footer a {
@@ -139,54 +138,49 @@ footer a {
     flex-direction: row;
     width: 3.4%;
     justify-content: center;
-
-}
-
-.sponsors {
-    display: flex;
-    width: 10vh;
-    height: 5vh;
-    gap: 10px;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 10vh;
-    border: 2px solid red;
-}
-
-.sponsors img {
-
-border: 2px solid white;
-    width: 100%;
-}
-
-.grid-footer img {
-    display:block;            /* ✅ elimina espacios extra debajo de la imagen */
-    height: 6vh;  
-    gap: 3px;
-    object-fit:contain;         /* ✅ mantiene proporción recortando si hace falta */
-    border-radius: 8px;
-    margin-bottom: 150px;
-}
-
-.mapafooter {
-    display: flex;
-    position: absolute;
-    margin-top: 0.8vh;
-
+    padding-top: 5px;
 }
 
 .imagefooter {
     display: flex;
+    position: relative;
     width: 100%;
-    height: 7vh;
-    gap: 10px;
-    margin-top: 5vh;
+    justify-content: space-between;
+    align-items: center;
     flex-direction: row;
-    justify-content: end;
-
 }
 
+.mapafooter {
+margin: 1%;
+display: flex;
+width: 300px;
+}
 
+.sponsors {
+    display: flex;
+    position: relative;
+    gap: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: top;
+}
+
+.sponsors img {
+    height: 6vh;
+}
+
+.redes {
+    display: flex;  
+    flex-direction: row;
+    align-items: center;
+    gap: 7px;
+    margin: 1%;
+    justify-content: space-around;
+}
+
+.redes img {
+    height: 7vh;
+}
 
 .paginas-principal {
     text-align: center;
