--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ header {
  
 }
 
-.menu-desplegable {
-
-}
 .logo-container {
     display: flex;
     display: inline-block; /* Se ajusta al tamaño de su contenido */
@@ -243,6 +240,7 @@ width: 300px;
     "formulario textoFormulario";
     gap: 10px;
     margin: 30px;
+    padding: 10px;
 }
 
 .formulario {
@@ -251,7 +249,7 @@ width: 300px;
     background-color: #3A3A3A;
     align-items: center;
     width: 80vh;
-    height: 80vh;
+    height: 90vh;
     border-radius: 5px;
     gap: 10px;
     padding: 30px;
@@ -276,7 +274,7 @@ width: 300px;
     align-items: center;
     color: #F5F5F5;
     width: 100vh;
-    height: 100vh;
+    height: 110vh;
     text-shadow: 20px black;
     padding: 5% 0% 0% 0%;
     background-color: #3A3A3A;
