--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 
+/*HTML INDEX */
+
 header {
     display: flex;
     justify-content: space-between;
@@ -14,20 +16,17 @@ header {
     background-image: url(../images/header-background.png);
     background-repeat: no-repeat;
     background-size: 80%;
-
- 
-}
+ }
 
 .logo-container {
     display: flex;
-    display: inline-block; /* Se ajusta al tamaño de su contenido */
-    margin-left: 120px;
  }
 
  .logo {
-    display: block; /* Elimina espacios indeseados debajo de la imagen */
-    max-width: 200px; /* Ajustá el tamaño según tu imagen */
+    display: block;
+    max-width: 150px;
     height: auto;
+    margin: 1%;
  }
 
 header nav a{
@@ -36,57 +35,64 @@ header nav a{
     font-family: 'lato', sans-serif;
     font-weight: bold;
     text-decoration: none;
-    gap: 20px;
-    width: 100%;
+    justify-content: center;
+    padding: 6px 15px 7px 15px;
+    font-size: medium;
 }
 
 header ul {
     display: flex;
     list-style-type: none;
-    justify-content: end;
-    align-content: end;
-    width: 100%;
-    font-size: medium;
-    gap: 20px;
-    padding: 0.5%;
+    margin: 0;
+    background-color: black;
+    padding: 0;
+}
+
+header nav a:hover {
+    color: black;
+    background-color: #D72638;
 }
 
 body {
     font-family: 'lato';
     background-size:cover;
-    height: 100%;
 }
 
 body h1, h2 {
     color: #D72638;
+}
 
+h3 {
+    display: flex;
+    justify-content: center;
+    background-color: #3A3A3A;
+    color: #D72638;
+    width: 20%;
+    margin-left: 4vh;
+    border-radius: 10px;
 }
 
 .primer-parrafo {
     display: flex;
     align-items:top;
     flex-direction: row;
+    height: 60vh;
     justify-content:space-between;
-    gap: 1.5%; 
-    padding: 1%;
     background-color: #3A3A3A;
+    background-size:contain;
+    border-radius: 20px;
     gap: 1.5%;
     padding: 1%;
     margin: 2%;
-    background-size:contain;
-    border-radius: 20px;
 }
-
 
 .primer-parrafo div {
     width: 100%;
 }
 
-
 .primer-parrafo p {
     align-items: center;
-    font-weight: bold;
-    color:#1C1C1C;
+    color: #CCCCCC;
 }
 
 .segundo-parrafo {
@@ -94,17 +100,16 @@ body h1, h2 {
     flex-direction: row;
     justify-content: flex-start;
     gap: 1.5%;
-    padding: 1%;
-    margin: 2%;
-    font-weight: bold;
     text-align: end;
     border-radius: 20px;
     background-color: #3A3A3A;
     background-size:contain;
+    padding: 1%;
+    margin: 2%;
 }
 
 .segundo-parrafo p {
-    color:#1C1C1C;
+    color: #CCCCCC;
 }
 .segundo-parrafo img {
     display: flex;
@@ -112,12 +117,65 @@ body h1, h2 {
     margin-top: 0.5%;
 }
 
+/* INDEX GRID */
+
+
+.grid-container1 {
+    display: grid;
+    border: 1px solid red;
+    justify-content: center;
+    grid-template-columns: 0.7fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "foto1 foto2 foto3"
+    "foto1 foto4 foto5";
+    gap: 10px;
+    margin: 2%;
+    height: 62vh;
+
+}
+
+.foto1 { grid-area: foto1; }
+.foto2 { grid-area: foto2; }
+.foto3 { grid-area: foto3; }
+.foto4 { grid-area: foto4; }
+.foto5 { grid-area: foto5; }
+
+
+.grid-container1 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.foto2 img, .foto3 img, .foto4 img, .foto5 img {
+    height: 30vh;
+}
+
+.grid-container2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+    "hola1 hola2";
+    justify-content: center;
+    gap: 10px;
+    margin: 2%;
+}
+
+/* INDEX GRID FIN */
+
+.h1paginas {
+    margin: 0.5%;
+    color: #D72638;
+}
+
 footer {
     display: flex;
-    background-color: #1C1C1C;
     position: relative;
     flex-direction: column;
     align-items: center;
+    background-color: #1C1C1C;
 }
 
 footer p{
@@ -148,9 +206,9 @@ footer a {
 }
 
 .mapafooter {
-margin: 1%;
-display: flex;
-width: 300px;
+    margin: 1vh 0vh 0vh 1vh;
+    display: flex;
+    width: 300px;
 }
 
 .sponsors {
@@ -180,7 +238,13 @@ width: 300px;
 }
 
 .paginas-principal {
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
     text-align: center;
+    width: 80%;
+    margin: 0% 10% 0 10%;
+    border: 1px solid red;
 }
 
 .negrita {
@@ -190,47 +254,9 @@ width: 300px;
     justify-content: flex-end;
     margin: 1vh;
     text-shadow: 0px 0px 19px rgba(0,0,0,0.6);
-    
 }
 
-.grid-container1 {
-    display: grid;
-    border: 1px solid red;
-    justify-content: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    "foto1 foto2 foto3"
-    "foto4 foto5 foto6";
-    gap: 10px;
-    margin: 2%;
-}
-
-.grid-container1 img {
-    display: block;            /* ✅ elimina espacios extra debajo de la imagen */
-    width: 100%;               /* ✅ que llene completamente la celda */
-    height: 50vh;              /* ✅ que ocupe todo el alto de la celda */
-    object-fit: cover;         /* ✅ mantiene proporción recortando si hace falta */
-    border-radius: 8px;
-}
-
-.grid-container2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-    "hola1 hola2";
-    justify-content: center;
-    gap: 10px;
-    margin: 2%;
-}
-
-.h1paginas {
-    margin: 0.5%;
-    color: #D72638;
-}
-
-/* pagina inscripcion.. estara bien hacer los styles.css sobre el mismo css que el index? */
+/* HTML INSCRIPCION.. estara bien hacer los styles.css sobre el mismo css que el index? */
 
 .inscripcion {
     display: grid;
@@ -255,7 +281,6 @@ width: 300px;
     padding: 30px;
     margin-left: 40px;
 }
-
 
 
 /* estara bien hacer el form aparte? si ya esta dividido por un /div */
@@ -298,6 +323,7 @@ flex-direction: column;
 justify-content: end;
 }
 
+/* HTML CONTACTOS */
 
 @media (max-width: 600px) { /* EL MENU NAV TIENE QUE ESTAR EN BOOTSTRAP (O EN LO Q SEA) PERO SI O SI DESPLEGABLE */
     
