--- a/css/style.css
+++ b/css/style.css
@@ -332,12 +332,14 @@ justify-content: end;
         flex-direction: column;
         align-items: center;
         gap: 10px;
-        padding: 1rem 0;
+        background-size: 140%;
+        background-position: center;
     }
 
     .menu-desplegable {
         align-self: flex-end;
         margin-right: 10px;
+        padding: 0;
     }
 
     .logo-container {
@@ -353,11 +355,13 @@ justify-content: end;
         padding: 0;
         margin: 0;
         gap: 50px;
+        background-color: black;
     }
     
     header nav ul li {
         width: 100%;
         margin: 0;
+        padding: 0;
     }
 
     header nav a {
@@ -415,43 +419,50 @@ justify-content: end;
         margin-bottom: 10px;
     }
 
+    footer {
+        display: flex;
+        
+    }
+
     .mapafooter {
-        width: 50%;
-        height: auto;
-        padding: 5px;
+        display: none;
     }
 
     .sponsors {
         flex-wrap: wrap;
         justify-content: center;
         gap: 15px;
-        border: 1px solid red;
     }
 
     .sponsors img {
-        height: 5vh;
+        height: 3vh;
     }
 
     .redes {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+    }
+
+    .redes p {
+        display: none;
     }
     .redes img {
         display: flex;
         height: 5vh;
-        border: 1px solid red;
         gap: 2px;
         flex-direction: row;
     }
 }
 
 /* --- CELULARES --- */
+
 @media (max-width: 600px) {
     header {
         flex-direction: column;
         align-items: center;
         gap: 8px;
-        padding: 0.5rem 0;
+        background-size: 180%;
+        background-position:center;
     }
 
     .logo-container {
@@ -463,10 +474,10 @@ justify-content: end;
         flex-direction: row;
         width: 100%;
         justify-content: center;
-        background-color: #1C1C1C;
         padding: 0;
         margin: 0;
         gap: 10px;
+        background-color: black;
     }
 
     header nav ul li {
@@ -542,11 +553,13 @@ justify-content: end;
         margin: 10px auto;
         font-size: 1.2rem;
     }
+    
+    footer {
+        flex-direction: column;
+    }
 
     .mapafooter {
-        width: 100%;
-        height: 150px;
-        margin: 10px 0;
+        display: none;
     }
 
     .sponsors {
@@ -557,15 +570,19 @@ justify-content: end;
     }
 
     .sponsors img {
-        height: 4vh;
-    }
 
-    .redes img {
-        height: 4vh;
+        height: 3vh;
     }
 
     .redes {
-        gap: 5px;
-        margin: 0.5rem 0;
+        display: flex;
+        margin: 1px;
+    }
+
+    .redes p {
+        display: none;
+    }
+    .redes img {
+        height: 4vh;
     }
 }
