--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@ text-align: center;
 /* CELULARES */
 
 @media (max-width: 600px) {
+    .menu-desplegable {
+        display: flex;
+        margin-right: 21rem;
+    }
     header {
         flex-direction: column;
         align-items: center;
