--- a/sass/partials/_campeones.scss
+++ b/sass/partials/_campeones.scss
@@ -2,22 +2,23 @@
 
 .tablacampeones {
     display: flex;
+    width: 50%;
     justify-content: center;
-
+    margin: auto;
+    padding: 10px;
     th {
     padding: 5px;
   }
 }
 .carrousel {
-    display: flex;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  width: 30rem;
+  object-fit: cover;
+  margin: auto;
+  justify-content: center;
 
     img {
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    width: auto;
     height: 30rem;
+  object-fit: cover;
     }
 }
