--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -88,6 +88,7 @@ body {
     border-radius: 8px;
     }
 .foto2 img, .foto3 img, .foto4 img, .foto5 img {
+    object-fit: cover;
     height: 30vh;
     }
 }
