Se emprolijo un poco el codigo. tambien se cambio el orden del grid index y se agrego una grid de fechas en entradas con mixin

--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -5,3 +5,14 @@
     border-radius: 5px;
     padding: 10px;
 }
+
+@mixin entradasgrid {
+  background-color: variables.$grisace;
+  padding: 10px;
+  border-radius: 5px;
+  color: variables.$blancotit;
+
+  h3 {
+    color: variables.$rojofr;
+  }
+}
