--- a/css/estilos.css
+++ b/css/estilos.css
@@ -427,6 +427,39 @@ body h3 {
   border-radius: 5px;
   color: #F5F5F5;
   margin: 10px;
+  flex-direction: column;
+}
+.entradas .fechas {
+  margin: 2rem;
+  text-align: center;
+}
+.entradas .fechas h2 {
+  color: #D72638;
+}
+.entradas .fechas .fechasgrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.entradas .fechas .fechasgrid .evento {
+  background-color: #3A3A3A;
+  padding: 10px;
+  border-radius: 5px;
+  color: #F5F5F5;
+  animation: fadeIn 0.8s ease forwards;
+}
+.entradas .fechas .fechasgrid .evento h3 {
+  color: #D72638;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .entradasformulario {
@@ -445,6 +478,12 @@ body h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .fechasgrid {
+    grid-template-columns: 1fr;
+  }
+  .evento {
+    width: 5rem;
   }
 }
 .inscripcion {
