--- a/sass/partials/_entradas.scss
+++ b/sass/partials/_entradas.scss
@@ -4,6 +4,8 @@
 display: flex;
 flex-direction: row;
 
+
+
 .textoentradasform {
     @extend %areagris;
     display: flex;
@@ -13,8 +15,40 @@ flex-direction: row;
     border-radius: 5px;
     color: variables.$blancotit;
     margin: 10px;
+    flex-direction: column;
     }
+
+    .fechas {
+  margin: 2rem;
+  text-align: center;
+
+  h2 {
+    color: variables.$rojofr;
+  }
+
+  .fechasgrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+    .evento {
+      @include mixins.entradasgrid;
+      animation: fadeIn 0.8s ease forwards;
+    }
+
+    @keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+     }
+    }
+   }
  }
+}
 
 .entradasformulario {
     @extend %areagris;
@@ -26,8 +60,8 @@ flex-direction: row;
         list-style-type: none;
         flex-direction: column;
         text-align: center;
-        }
-        }
+    }
+  }
 }
 
 @media (max-width: 600px) {
@@ -36,5 +70,13 @@ flex-direction: row;
     display: flex;
     flex-direction: column;
     align-items: center;
-    }
+      }
+
+      .fechasgrid {
+    grid-template-columns: 1fr;
+      }
+
+      .evento {
+        width: 5rem;
+      }
 }
